# edge-ai-suites

.github/workflows/: industrial-edge-insights-time-series-tests.yml  publish-docs.yml
education-ai-suite/smart-classroom/: config.yaml
education-ai-suite/smart-classroom/content_search/: start_services.py
education-ai-suite/smart-classroom/content_search/utils/: qa_service.py
health-and-life-sciences-ai-suite/NICU-Warmer/: readme.md
manufacturing-ai-suite/industrial-edge-insights-multimodal/docs/user-guide/: get-started.md
metro-ai-suite/image-based-video-search/docs/user-guide/: get-started.md
metro-ai-suite/live-video-analysis/live-video-alert-agent/: third_party_programs.txt
metro-ai-suite/live-video-analysis/live-video-captioning/app/: Dockerfile
metro-ai-suite/metro-vision-ai-app-recipe/: compose-without-scenescape.yml
metro-ai-suite/metro-vision-ai-app-recipe/loitering-detection/: install.sh
metro-ai-suite/sensor-fusion-for-traffic-management/: README.md
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/: CMakeLists.txt  README.md  autotest.sh  autotest_docker.sh  bin2pcd_convert.py  build.sh  custom_openvino_2026.1.0_sparse_ops.patch  install_custom_openvino.sh  install_driver_related_libs.sh  install_project_related_libs.sh
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/data/: model_asset_mode.txt
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/data/kitti/pointpillars/: camera.backbone.onnx  fuser.onnx  head.onnx  lidar_pfe_v7000.onnx  quantized_camera.xml  quantized_fuser.xml  quantized_head.xml  quantized_lidar_pfe.xml
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/data/kitti/second/: bevfusion_unified_fp16.onnx  bevfusion_unified_int8.xml
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/data/v2xfusion/dataset/label_2/: 000000.txt
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/data/v2xfusion/pointpillars/: camera.backbone.onnx  fuser.onnx  head.onnx  lidar_pfe_v6000.onnx  quantized_camera.xml  quantized_fuser.xml  quantized_head.xml
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/data/v2xfusion/second/: bevfusion_unified_fp16.onnx  bevfusion_unified_int8.xml
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/docker/: .env  Dockerfile.dockerfile  README_Docker.md  build_docker.sh  docker-compose.yml  run_docker.sh
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/docs/: GSG.md  Prerequisites.md  Testing.md  nvidia_ckpt_to_intel_gpu.md
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/docs/nvidia_ckpt_to_intel_gpu_patches/export/pointpillars/: quantize_all.py
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/include/common/: dtype.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/src/: common.cpp  common.hpp  configs.hpp  gpu_context_manager.hpp  kitti_loader.cpp  kitti_loader.hpp  latency_stats.hpp  utilization_monitor.cpp  utilization_monitor.hpp  utils.hpp  visualization.cpp  visualization.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/src/bevfusion_unified/: bevfusion_unified_configs.hpp  voxelizer_sycl.cpp  voxelizer_sycl.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/src/cam_bev/: bev.cc  bev.h  bev_cam.cpp  bev_cam.hpp  bev_datatypes.h  bev_nms3diou.cc  bev_sycl.cc  bev_sycl.h  bev_utils.cpp  camera-geometry.cpp  camera-geometry.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/src/common/: voxelizer_utils.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/src/fusion/: bev_fuser.cpp  bev_fuser.hpp  bev_head.cpp  bev_head.hpp  postprocess_cpu.cpp  postprocess_cpu.hpp  postprocess_sycl.cpp  postprocess_sycl.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/src/pipeline/: bevfusion.hpp  bevfusion_unified.hpp  calib_metas.hpp  camera_backbone.hpp  camera_bev_backbone.hpp  dataset_preset.cpp  dataset_preset.hpp  fusion_backbone.hpp  lidar_backbone.hpp  split_pipeline_config.cpp  split_pipeline_config.hpp  tensor_view.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/src/pointpillars/: pointpillars.cpp  pointpillars.hpp  scatter.cpp  scatter.hpp  voxelizer.cpp  voxelizer.hpp
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/test/: bevfusion.cpp  bevfusion_unified.cpp  test_bev_pool.cpp  test_bevfusion_pipeline.cpp  test_camera_bev_pipeline.cpp  test_camera_geometry.cpp  test_fuser.cpp  test_fusion_pipeline.cpp  test_head_inference.cpp  test_lidar_pipeline.cpp  test_pointpillars.cpp  test_pointpillars_voxelizer.cpp  test_utils.cpp  test_utils.hpp  test_viewtransform.cpp
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/tools/: README_eval.md  kitti_3d_eval.py
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/tools/how_to_generate_kitti_format_dataset/: dair_v2x_i_to_kitti.py  kitti360_convert_to_kitti.py  kitti360_guide.md  kitti_dair_v2x_verification.py  kitti_pandaset_verification.py  pandaset_to_kitti.py  v2x_pandaset_guide.md
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/tools/pandaset-devkit/: README_cn.md  pandaset2kitti.py
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/tools/pandaset-devkit/python/: requirements.txt
metro-ai-suite/sensor-fusion-for-traffic-management/intermediate-fusion/tools/pandaset-devkit/python/pandaset/: geometry.py
metro-ai-suite/sensor-fusion-for-traffic-management/post-fusion/: .gitignore  build.sh  install_3rd.sh  install_VPL_local.sh  install_driver_related_libs.sh  install_project_related_libs.sh  run_service_bare.sh  run_service_bare_log.sh  scan_install_project_related_libs.sh
metro-ai-suite/smart-nvr/: build.sh
robotics-ai-suite/scripts/: setup-robotics-humble.sh  setup-robotics-jazzy.sh
(+33 files in other folders)
